# SysY-Compiler

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Config.hpp  InstructionStatistics.txt  Lexer.cpp  Lexer.h  README.md  config.h  config.json  grammar.txt  main.cpp  main.rar  output.txt  submit.bat  test_parallel_copy.txt  testfile.c  zip.bat
backend/: MipsAllocator.cpp  MipsAllocator.h  MipsBuilder.cpp  MipsBuilder.h  MipsComponent.cpp  MipsComponent.h  MipsInst.cpp  MipsInst.h  MipsOperand.cpp  MipsOperand.h  MipsParser.cpp  MipsParser.h  PeepHole.cpp  PeepHole.h  SillyParser.cpp  SillyParser.h  readme.md
backend/mips/: MipsComponent.cpp  MipsComponent.h  MipsInst.cpp  MipsInst.h  MipsOperand.cpp  MipsOperand.h
driver/: Config.cpp  Config.h  Driver.cpp  Driver.h
frontend/: CheckError.cpp  LlvmIr.cpp
frontend/lexer/: Lexer.cpp  Lexer.h
frontend/nodes/: Block.cpp  BlockItem.cpp  CompUnit.cpp  CompUnit.h  ComplexStmt.cpp  Decl.cpp  Def.cpp  Def.h  Exp.cpp  Exp.h  ExpUniform.cpp  ExpUniform.h  FuncDef.cpp  FuncDef.h  FuncFParam.cpp  FuncFParams.cpp  FunctionCall.cpp  FunctionCall.h  InitVal.cpp  LVal.cpp  MainFuncDef.cpp  PrimaryExp.cpp  PrimaryExp.h  SimpleStmt.cpp  Stmt.cpp  TokenNode.cpp  TokenNode.h  UnaryExp.cpp  UnaryExp.h  lib.h
frontend/nodes-include/: ASTNode.h  Block.h  BlockItem.h  ComplexStmt.h  Decl.h  Def.h  Exp.h  ExpUniform.h  FuncDef.h  FuncFParam.h  FuncFParams.h  InitVal.h  LVal.h  MainFuncDef.h  PrimaryExp.h  SimpleStmt.h  TokenNode.h  UnaryExp.h
frontend/parser/: Exception.h  Parser.cpp  Parser.h  Symbol.cpp  Symbol.h  Symbol.hpp  TokenStream.h  TokenStream.hpp  lib.hpp
lexer/: Lexer.cpp  Lexer.h
llvm-ir/: BasicBlock.cpp  BasicBlock.h  Constant.cpp  Constant.h  Function.cpp  Function.h  GlobalVariable.cpp  GlobalVariable.h  Initializer.cpp  Initializer.h  IrBuilder.cpp  IrBuilder.h  Module.cpp  Module.h  Type.cpp  Type.h  Use.cpp  Use.h  User.cpp  User.h  Value.cpp  Value.h
llvm-ir/constant/: Constant.cpp  Constant.h  ConstantArray.h  ConstantInt.h  ConstantString.h
llvm-ir/instruction/: AllocaInst.cpp  AllocaInst.h  AluInst.cpp  AluInst.h  BrInst.cpp  BrInst.h  CallInst.cpp  CallInst.h  GEPInst.cpp  GEPInst.h  IcmpInst.cpp  IcmpInst.h  Instruction.cpp  Instruction.h  LoadInst.cpp  LoadInst.h  ParallelCopyInst.h  PhiInst.cpp  PhiInst.h  ReturnInst.cpp  ReturnInst.h  StoreInst.cpp  StoreInst.h  ZextInst.cpp  ZextInst.h
midend/: DFBuilder.cpp  DFBuilder.h  DeadCodeEmit.cpp  DeadCodeEmit.h  GVN.cpp  GVN.h  Mem2Reg.cpp  Mem2Reg.h  MidEnd.cpp  MidEnd.h  Minority.cpp  Minority.h  RemovePhi.cpp  RemovePhi.h
nodes/: ASTNode.h  ASTNode.hpp  Block.cpp  Block.h  BlockItem.cpp  BlockItem.h  BlockItem.hpp  CompUnit.cpp  CompUnit.h  CompUnit.hpp  ComplexStmt.cpp  ComplexStmt.h  ComplexStmt.hpp  Decl.cpp  Decl.h  Decl.hpp  Def.cpp  Def.h  Def.hpp  Exp.cpp  Exp.h  ExpUniform.cpp  ExpUniform.h  ExprOthers.cpp  ExprOthers.hpp  ExprUniform.hpp  FuncDef.cpp  FuncDef.h  FuncDef.hpp  FuncFParam.cpp  FuncFParam.h  FuncFParam.hpp  FuncFParams.cpp  FuncFParams.h  FuncFParams.hpp  FunctionCall.cpp  FunctionCall.h  InitVal.cpp  InitVal.h  InitVal.hpp  (+19 more)
parser/: ASTNode.cpp  ASTNode.hpp  CompUnit.cpp  CompUnit.hpp  Exception.hpp  IrCtx.cpp  IrCtx.h  Parser.cpp  Parser.h  Parser.hpp  Symbol.cpp  Symbol.hpp  TokenNode.hpp  TokenStream.cpp  TokenStream.h  TokenStream.hpp  define.hpp  lib.hpp
parser/declaration/: Decl.cpp  Decl.hpp  DeclarationParser.cpp  DeclarationParser.hpp  Def.cpp  Def.hpp  InitVal.cpp  InitVal.hpp
parser/expression/: ExpressionParser.cpp  ExpressionParser.hpp  Uniform.hpp  grammar  other.hpp
parser/expression/other/: other.cpp  other.hpp
parser/expression/uniform/: Uniform.cpp  Uniform.hpp
parser/function/: FuncDef.cpp  FuncDef.hpp  FuncFParam.cpp  FuncFParam.hpp  FuncFParams.cpp  FuncFParams.hpp  FunctionParser.cpp  FunctionParser.hpp  MainFuncDef.cpp  MainFuncDef.hpp  grammar
parser/statement/: BlockItem.cpp  BlockItem.hpp  ComplexStmt.cpp  ComplexStmt.hpp  SimpleStmt.cpp  SimpleStmt.hpp  StatementParser.cpp  StatementParser.hpp  Stmt.cpp  Stmt.hpp  grammar
testPoints/: createFile.bat  output1.txt  testfile1.txt  testfile3.txt  zipFile.bat
utils/: log.cpp
