cmake_minimum_required(VERSION 3.15)
project(compiler)

set(CMAKE_CXX_STANDARD 17)

add_executable(compiler main.cpp
        lexer/Lexer.cpp
        lexer/Lexer.h
        parser/Parser.h
        config.h
        parser/TokenStream.hpp
        nodes/ASTNode.h
        nodes/ExpUniform.h
        nodes/Exp.h
        nodes/TokenNode.h
        nodes/Decl.h
        nodes/Decl.h
        nodes/Def.h
        nodes/InitVal.h
        nodes/BlockItem.h
        nodes/SimpleStmt.h
        nodes/ComplexStmt.h
        nodes/Stmt.h
        nodes/FuncDef.h
        nodes/MainFuncDef.h
        nodes/FuncFParams.h
        nodes/CompUnit.h
        nodes/lib.h
        nodes/BlockItem.cpp
        nodes/ComplexStmt.cpp
        nodes/CompUnit.cpp
        nodes/Decl.cpp
        nodes/Def.cpp
        nodes/Exp.cpp
        nodes/ExpUniform.cpp
        nodes/FuncDef.cpp
        nodes/FuncFParam.cpp
        nodes/FuncFParams.cpp
        nodes/InitVal.cpp
        nodes/MainFuncDef.cpp
        nodes/SimpleStmt.cpp
        nodes/Stmt.cpp
        nodes/TokenNode.cpp
        parser/Parser.cpp
        parser/Exception.hpp
        parser/lib.hpp
        parser/Symbol.hpp
        parser/Symbol.cpp
        nodes/CompUnit.h
        nodes/BlockItem.cpp
        nodes/UnaryExp.h
        nodes/UnaryExp.cpp
        nodes/PrimaryExp.h
        nodes/PrimaryExp.cpp
        nodes/LVal.h
        nodes/LVal.cpp
        nodes/FunctionCall.h
        nodes/FunctionCall.cpp
        nodes/ComplexStmt.cpp
        nodes/FunctionCall.cpp
        utils/log.cpp
        llvm-ir/Module.h
        llvm-ir/Type.h
        llvm-ir/Function.h
        llvm-ir/Value.h
        llvm-ir/User.h
        llvm-ir/instruction/Instruction.h
        llvm-ir/Constant.h
        llvm-ir/BasicBlock.h
        llvm-ir/GlobalVariable.h
        llvm-ir/Use.h
        llvm-ir/Type.cpp
        llvm-ir/Initializer.h
        llvm-ir/IrBuilder.h
        llvm-ir/IrBuilder.cpp
        parser/IrCtx.h
        llvm-ir/instruction/ReturnInst.h
)
