cmake_minimum_required(VERSION 3.15)
project(compiler)

set(CMAKE_CXX_STANDARD 17)

add_executable(compiler main.cpp
        frontend/lexer/Lexer.cpp
        frontend/lexer/Lexer.h
        frontend/parser/Parser.h
        config.h
        frontend/parser/TokenStream.hpp
        frontend/nodes-include/ASTNode.h
        frontend/nodes-include/ExpUniform.h
        frontend/nodes-include/Exp.h
        frontend/nodes-include/TokenNode.h
        frontend/nodes-include/Decl.h
        frontend/nodes-include/Decl.h
        frontend/nodes-include/Def.h
        frontend/nodes-include/InitVal.h
        frontend/nodes-include/BlockItem.h
        frontend/nodes-include/SimpleStmt.h
        frontend/nodes-include/ComplexStmt.h
        frontend/nodes-include/Stmt.h
        frontend/nodes-include/FuncDef.h
        frontend/nodes-include/MainFuncDef.h
        frontend/nodes-include/FuncFParams.h
        frontend/nodes-include/CompUnit.h
        frontend/nodes-include/lib.h
        frontend/nodes/BlockItem.cpp
        frontend/nodes/ComplexStmt.cpp
        frontend/nodes/CompUnit.cpp
        frontend/nodes/Decl.cpp
        frontend/nodes/Def.cpp
        frontend/nodes/Exp.cpp
        frontend/nodes/ExpUniform.cpp
        frontend/nodes/FuncDef.cpp
        frontend/nodes/FuncFParam.cpp
        frontend/nodes/FuncFParams.cpp
        frontend/nodes/InitVal.cpp
        frontend/nodes/MainFuncDef.cpp
        frontend/nodes/SimpleStmt.cpp
        frontend/nodes/Stmt.cpp
        frontend/nodes/TokenNode.cpp
        frontend/parser/Parser.cpp
        frontend/parser/Exception.hpp
        frontend/parser/lib.hpp
        frontend/parser/Symbol.hpp
        frontend/parser/Symbol.cpp
        frontend/nodes-include/CompUnit.h
        frontend/nodes/BlockItem.cpp
        frontend/nodes-include/UnaryExp.h
        frontend/nodes/UnaryExp.cpp
        frontend/nodes-include/PrimaryExp.h
        frontend/nodes/PrimaryExp.cpp
        frontend/nodes-include/LVal.h
        frontend/nodes/LVal.cpp
        frontend/nodes-include/FunctionCall.h
        frontend/nodes/FunctionCall.cpp
        frontend/nodes/ComplexStmt.cpp
        frontend/nodes/FunctionCall.cpp
        llvm-ir/Module.h
        llvm-ir/Type.h
        llvm-ir/Function.h
        llvm-ir/Value.h
        llvm-ir/User.h
        llvm-ir/instruction/Instruction.h
        llvm-ir/constant/Constant.h
        llvm-ir/BasicBlock.h
        llvm-ir/GlobalVariable.h
        llvm-ir/Use.h
        llvm-ir/Type.cpp
        llvm-ir/IrBuilder.h
        llvm-ir/IrBuilder.cpp
        llvm-ir/instruction/ReturnInst.h
        frontend/nodes-include/Block.h
        frontend/nodes/Block.cpp
        llvm-ir/instruction/AllocaInst.h
        llvm-ir/instruction/AluInst.h
        llvm-ir/constant/ConstantInt.h
        llvm-ir/constant/ConstantArray.h
        llvm-ir/instruction/StoreInst.h
        llvm-ir/instruction/GEPInst.h
        llvm-ir/instruction/LoadInst.h
        llvm-ir/instruction/CallInst.h
        llvm-ir/constant/ConstantString.h
        llvm-ir/instruction/BrInst.h
        llvm-ir/instruction/IcmpInst.h
        llvm-ir/instruction/ZextInst.h
        midend/DFBuilder.h
        midend/DFBuilder.cpp
        midend/MidEnd.h
        midend/Mem2Reg.h
        midend/Mem2Reg.cpp
        llvm-ir/instruction/PhiInst.h
        llvm-ir/Value.cpp
        llvm-ir/User.cpp
        backend/MipsInst.h
        backend/MipsParser.h
        backend/MipsBuilder.cpp
        backend/MipsComponent.cpp
        backend/MipsInst.cpp
        backend/MipsOperand.cpp
        backend/MipsParser.cpp
        llvm-ir/BasicBlock.cpp
        llvm-ir/Function.cpp
        llvm-ir/Module.cpp
        llvm-ir/constant/Constant.cpp
)
